# Snake-Game

./: CMakeLists.txt  LICENSE.md  README.md
src/: controller.cpp  controller.h  game.cpp  game.h  gamestate.cpp  gamestate.h  main.cpp  movingobstacle.cpp  movingobstacle.h  renderer.cpp  renderer.h  snake.cpp  snake.h
